#185: try fixing attribution on mobile devices

--- a/branding/src/index/picture-carousel.scss
+++ b/branding/src/index/picture-carousel.scss
@@ -128,7 +128,8 @@
         }
     }
 
-    &:has(.vbp-picture-carousel-attribution-container:hover) {
+    &:has(.vbp-picture-carousel-attribution-container:hover),
+    &:has(.vbp-picture-carousel-attribution-container:active) {
         max-width: 120em;
 
         .vbp-picture-carousel-attribution {
